# hydra-mlflow-trainer

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  mlflow.db  pyproject.toml  train.py
configs/dataset/: ag_news.yaml
configs/db/: mysql.yaml  postgres.yaml
configs/model/: bert.yaml
configs/trainer/: default.yaml
mlflow/: Dockerfile
trainer/: __main__.py  app.py  loop.py  train.py
trainer/configs/: config.yaml
trainer/configs/dataset/: ag_news.yaml
trainer/configs/trainer/: default.yaml
trainer/datasets/: ag_news.py  utils.py
trainer/models/: bert.py
